--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
-title: P2PU Hogwarts
-description: P2PU learning circle team template
-language: en
+title: P2PU & Fundația Progress
+description: 'Proiectul Learning Circles ajunge și în România
+
+  Alătură-te comunității tale și vino în bibliotecă să învățați împreună! Cercul de
+  învățare te așteaptă săptămânal, timp de 6-8 săptămâni, iar intrarea este liberă.'
+language: ro
