--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,16 +1,7 @@
-socials:
-- text: Instagram
-  url: https://www.instagram.com/p2puniversity/
-  icon_class: fa fa-instagram
-- text: Twitter
-  url: https://twitter.com/p2pu
-  icon_class: fa fa-twitter
-- text: Facebook
-  url: https://www.facebook.com/P2PUniversity
-  icon_class: fa fa-facebook
+socials: []
 project_link: http://www.progressfoundation.ro/learning-circles-3/
-license: 'Unless otherwise noted, all the materials on this site are licensed under CC BY-SA 4.0.'
-about_orgs: 'P2PU is a U.S. 501(c)3 registered in California.'
+license: 'Toate materialele de pe acest site se află sub licența CC BY-SA 4.0.'
+about_orgs: 'P2PU este un SUA 501 (c) 3 înregistrat în California.'
 tos:
   title: Termeni și Servicii
   url: https://www.p2pu.org/en/terms/
